<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBDDDD"
    tools:context=".ui.neighbour_details.DetailsNeighbourActivity"
    tools:ignore="ContentDescription">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="0dp"
        android:layout_height="256dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_test" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tv_name_photo"
        android:layout_width="163dp"
        android:layout_height="47dp"
        android:layout_marginTop="174dp"
        android:text="@string/name"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_photo"
        app:layout_constraintVertical_bias="0.4" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_up"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo"
        app:layout_constraintVertical_bias="0.053">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_height"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <ImageView
                android:id="@+id/image_address"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/padding_image"
                android:src="@drawable/ic_place"
                app:layout_constraintRight_toLeftOf="@id/tv_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_address"
                android:layout_width="0dp"
                android:layout_height="@dimen/textview_height"
                android:gravity="center_vertical"
                android:text="@string/address"
                app:layout_constraintBottom_toTopOf="@id/tv_phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/image_address"
                app:layout_constraintStart_toEndOf="@id/image_address" />

            <ImageView
                android:id="@+id/image_phone"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/padding_image"
                android:src="@drawable/ic_phone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_address" />

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="0dp"
                android:layout_height="@dimen/textview_height"
                android:gravity="center_vertical"
                android:text="@string/phone"
                app:layout_constraintBottom_toTopOf="@id/tv_website"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/image_phone"
                app:layout_constraintStart_toEndOf="@+id/image_phone" />

            <ImageView
                android:id="@+id/image_earth"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/padding_image"
                android:src="@drawable/ic_language"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_phone" />

            <TextView
                android:id="@+id/tv_website"
                android:layout_width="0dp"
                android:layout_height="@dimen/textview_height"
                android:gravity="center_vertical"
                android:text="@string/website"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image_earth" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cv_down"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="32dp"
        app:cardCornerRadius="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_up">

        <LinearLayout
            android:id="@+id/ll_down"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_about_me"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_height"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                android:text="@string/About"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorGrey" />

            <ScrollView
                android:id="@+id/sv_texte"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_about_me_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="5dp"
                    android:text="@string/text_details" />
            </ScrollView>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/colorWhite"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_star_border_black"
        app:layout_constraintBottom_toBottomOf="@+id/iv_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_photo" />

</android.support.constraint.ConstraintLayout>